<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Signup">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:textColor="@color/black"
        android:clickable="true"
        android:text="CEMS"
        android:textStyle="bold"
        android:textSize="80sp"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:id="@+id/username_signup"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"/>

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:id="@+id/password_signup"
        android:textColorHint="@color/black"
        android:inputType="textPassword"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:id="@+id/button_signup"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:id="@+id/signin_signup"
        android:text="@string/already_have_an_account_sign_in"
        android:focusable="true" />

</LinearLayout>