<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".feedback"
    android:background="@color/dark"
    tools:showIn="@layout/activity_feedback">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:text="Feedback"
        android:textSize="30sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorAccent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/feedback_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/kindadark"
            android:textColorHint="@color/kindadark"
            android:hint="@string/feedback_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorAccent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/feedback_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:hint="@string/feedback_emal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="350dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorAccent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            android:hint="@string/feedback" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>